[tool.poetry]
name = "pythonic-garage-band"
version = "0.1.0"
description = ""
authors = ["Taylor <taylorwhite21@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
